[package]
name = "esp32-phantom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = "0.12.0"
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
esp-println = { version = "0.5.0", features = ["log"] }
esp-wifi = { path = "esp-wifi/esp-wifi", features = ["esp32"] }
log = "0.4.17"
heapless = { version = "0.7.14", default-features = false }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
num-derive = { version = "0.3", features = ["full-syntax"] }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }

[features]
wifi = ["esp-wifi/wifi"]
ble = ["esp-wifi/ble"]
esp32 = []
